--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,37 @@
-name: Deploy React App to GitHub Pages
+# name: Deploy React App to GitHub Pages
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18' # Use the appropriate Node.js version
+#     - name: Set up Node.js
+#       uses: actions/setup-node@v3
+#       with:
+#         node-version: '18' # Use the appropriate Node.js version
 
-    - name: Install dependencies
-      run: |
-        cd react-app
-        npm install
+#     - name: Install dependencies
+#       run: |
+#         cd react-app
+#         npm install
 
-    - name: Set up Git user
-      run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@github.com'
+#     - name: Set up Git user
+#       run: |
+#         git config --global user.name 'GitHub Actions'
+#         git config --global user.email 'actions@github.com'
         
-    - name: Build and deploy
-      run: |
-        cd react-app
-        npm run deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CI: false
+#     - name: Build and deploy
+#       run: |
+#         cd react-app
+#         npm run deploy
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         CI: false
