--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           cd react-app
           npm run build
+        env:
+          CI: false
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
