--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           cd react-app
           npm run build
+        env:
+          CI: false
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
