--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,68 +1,36 @@
-name: Deploy React App to GitHub Pages
+name: Build and Deploy
 
 on:
   push:
     branches: ["main"]
 
-  workflow_dispatch:
-
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'  # Specify your Node.js version here
-
-      - name: Install dependencies
-        run: |
-          cd react-app
-          npm install
-
-      - name: Build React app
-        run: |
-          cd react-app
-          npm run build
-        env:
-          CI: false
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: react-app/build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-
-      - name: Deploy to GitHub Pages
-        uses: actions/configure-pages@v3
-        with:
-          path: react-app/build
-
-      - name: Deploy
-        uses: actions/deploy-pages@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: "npm"
+    - name: Install Packages
+      run: npm install
+    - name: Build
+      run: npm run build
+      env:
+        CI: false
+    - name: Deploy🚀
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        branch: gh-pages
+        folder: react-app/build
