--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -18,19 +18,17 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Enter Directory
-      run: cd react-app
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: "npm"
+
     - name: Install Packages
+      working-directory: react-app
       run: npm install
+
     - name: Build
+      working-directory: react-app
       run: npm run build
       env:
         CI: false
+
     - name: Deploy🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
